# hubmap-organ-segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml
hubmap/: __init__.py  __main__.py
hubmap/data/: __init__.py  datagen.py  preparse.py
hubmap/models/: __init__.py  base.py
hubmap/utils/: __init__.py  constants.py  helpers.py  paths.py
notebooks/: eda.ipynb  preparse.ipynb
